# hcl-netbox-discovery

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  SUPPORT.md  cache-warmer.py  collector_jobs.sqlite3  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  web_server.py  xclarity-collector.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  mapping_or_adapter_request.yml
.github/workflows/: docker-publish.yml
archive/: README.md  azure-collector.py  ldap-collector.py  vmware-collector.py
archive/diode-catc/: DockerFile  README.md  catc_connector.py  catc_fetcher.py  data_conversion.py  diode-catc.py  requirements.txt  setup.py  transformer.py
archive/diode-catc/includes/: host_site_rules.yml  host_tenant_rules.yml  skip_vms.yml  vm_role_rules.yml  vm_tenant_rules.yml
collector/: __init__.py  config.py  context.py  db.py  engine.py  field_resolvers.py  job_lifecycle.py  job_log_handler.py  prerequisites.py
collector/sources/: ansible.py  azure.py  catc.py  f5.py  ldap.py  netbox.py  nexus.py  prometheus.py  rest.py  salt.py  snmp.py  tenable.py  utils.py  vmware.py  xclarity.py
docs/: ARCHITECTURE.md  DEVELOPER_ONBOARDING.md  ENGINEERING_AUDIT.md  HCL_DESIGN.md  HCL_REFERENCE.md  REPOSITORY_GUIDE.md  SOURCE_PAYLOAD_CONTRACTS.md
docs/ISSUE_DRAFTS/: 001-atomic-job-lifecycle.md  002-web-control-plane-security.md  003-engine-write-integrity-and-failure-semantics.md  004-truthful-reporting-and-observability.md  005-adapter-contracts-and-transport-cleanup.md  README.md
lib/: pynetbox2.py
mappings/: active-directory-computers.hcl.example  active-directory-users.hcl.example  ansible.hcl.example  azure.hcl  azure.hcl.example  catalyst-center.hcl.example  catc.hcl.example  f5.hcl.example  jnsu.hcl.example  juniper-snmp.hcl  juniper-snmp.hcl.example  ldap.hcl  ldap.hcl.example  linux-snmp.hcl  linux-snmp.hcl.example  netbox-to-netbox.hcl.example  nexus-modules.hcl.example  nexus.hcl  nexus.hcl.example  prometheus.hcl  prometheus.hcl.example  salt.hcl.example  tenable.hcl  tenable.hcl.example  vmware.hcl  vmware.hcl.example  xclarity-modules.hcl  xclarity-modules.hcl.example  xclarity.hcl  xclarity.hcl.example
regex/: catc_site_to_site.example  cluster_to_site.example  host_to_tenant.example  juniper-interface-types.example  linux-interface-types.csv  nexus_site_to_site.example  vm_to_role.example  vm_to_tenant.example  xclarity_location_to_site.example  xclarity_room_to_location.example
scripts/: ansible_ee_fact_discovery.sh  ansible_fact_discovery.yml  bump_version.py
src/: capture_sync_job.py  pull_sync_artifacts.py
src/collector/: __init__.py  cache_keys.py  config.py  context.py  db.py  engine.py  field_resolvers.py  job_lifecycle.py  job_log_handler.py  prerequisites.py  write_locks.py
src/collector/sources/: azure.py  base.py  catc.py  f5.py  ldap.py  netbox.py  nexus.py  rest.py  salt.py  snmp.py  utils.py  vmware.py
src/web/: __init__.py  app.py  auth.py  serializers.py  web_server.py
src/web/templates/: base.html  cache.html  index.html  job_detail.html  schedule_edit.html  settings.html
tests/: conftest.py  test_ansible.py  test_azure.py  test_base.py  test_bump_version.py  test_cache_keys.py  test_catc.py  test_config.py  test_db.py  test_engine_bounded_futures.py  test_engine_dry_run_lookup_identity.py  test_engine_interface_write_integrity.py  test_engine_lookup_guard.py  test_engine_nested_required_field_strictness.py  test_engine_object_filters.py  test_engine_oob_ip.py  test_engine_optional_prereq_noise.py  test_engine_prerequisite_fail_loud.py  test_engine_primary_ip.py  test_engine_required_field_strictness.py  test_engine_required_fk_strictness.py  test_engine_startup_logging.py  test_engine_tagged_vlans.py  test_engine_tags.py  test_engine_upsert_reporting.py  test_engine_virtual_disks.py  test_f5.py  test_field_resolvers.py  test_ldap.py  test_main.py  test_modules.py  test_netbox.py  test_netbox_retry_cooldown_config.py  test_netbox_to_netbox_mapping.py  test_nexus.py  test_nexus_custom_objects_mapping.py  test_nexus_mapping.py  test_nexus_modules_mapping.py  test_prerequisites.py  test_prometheus.py  (+10 more)
web/: __init__.py  app.py
web/templates/: 404.html  base.html  cache.html  index.html  job_detail.html  login.html  schedule_edit.html  schedules.html  settings.html
