[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["collector*", "web*"]

[project]
name = "hcl-netbox-discovery"
version = "0.1.0"
description = "Modular HCL-driven NetBox discovery engine"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pynetbox==7.3.3",
    "pyvmomi==8.0.3.0.1",
    "requests==2.32.3",
    "deepdiff==8.0.1",
    "pyyaml==6.0.2",
    "redis",
    "ldap3",
    "pysnmp>=7.1",
    "netboxlabs-diode-sdk",
    "flask>=3.0",
    "python-hcl2>=4.3.0",
    "croniter>=1.3",
    "dnacentersdk>=2.6.0",
    "azure-identity>=1.15.0",
    "azure-mgmt-compute>=30.0.0",
    "azure-mgmt-network>=25.0.0",
    "azure-mgmt-subscription>=3.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "pre-commit>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",   # line too long — handled by formatter
    "UP007",  # use X | Y for type hints — keep compat with 3.9
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests
