[tool.poetry]
name = "hcl-netbox-discovery"
version = "1.0.33"
description = "Modular HCL-driven NetBox discovery engine"
authors = ["HCL NetBox Discovery Maintainers <noreply@example.com>"]
packages = [
    { include = "collector", from = "src" },
    { include = "web", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pynetbox-wrapper = { git = "https://github.com/erichester76/pynetbox-wrapper.git", rev = "96871bba7234ef32e818a30457308297260b98fa" }
turbobulk-client = { git = "https://github.com/netboxlabs/netbox-turbobulk-public.git", rev = "0405054fa538080c1d6e7f23b01ba4e16d8e01ec" }
pynetbox = "7.3.3"
pyvmomi = "8.0.3.0.1"
requests = "2.32.3"
deepdiff = "8.0.1"
pyyaml = "6.0.2"
redis = "*"
ldap3 = "*"
pysnmp = ">=7.1"
netboxlabs-diode-sdk = "*"
flask = ">=3.0"
python-hcl2 = "7.3.1"
croniter = ">=1.3"
dnacentersdk = ">=2.6.0"
azure-identity = ">=1.15.0"
azure-mgmt-compute = ">=30.0.0"
azure-mgmt-network = ">=25.0.0"
azure-mgmt-subscription = ">=3.1.1"
cryptography = ">=46,<47"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-cov = ">=4.0"
ruff = ">=0.4.0"
pre-commit = ">=3.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",   # line too long — handled by formatter
    "UP007",  # use X | Y for type hints — keep compat with 3.9
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests
